--- a/elasticsearch-eck.yml
+++ b/elasticsearch-eck.yml
@@ -8,15 +8,85 @@ spec:
     fileRealm:
       - secretName: elasticsearch-secret
   nodeSets:
-    - name: default
+    - name: master
       count: 3
       config:
         # most Elasticsearch configuration parameters are possible to set, e.g: node.attr.attr_name: attr_value
         #node.roles: ["master", "data", "ingest", "ml"]
-        node.roles: ["master", "data", "ingest"]
+        node.roles: ["master"]
         script.painless.regex.enabled: true
         http.cors.enabled: true
         http.cors.allow-origin: "*"
-        network.host: _site_
-        node.name: ${HOSTNAME}
+        #network.host: _site_ Forbidden: Configuration setting is reserved for internal use
+        #node.name: ${HOSTNAME} Forbidden: Configuration setting is reserved for internal use
         bootstrap.memory_lock: true
+        #xpack.security.transport.ssl.enabled: true Forbidden: Configuration setting is reserved for internal use
+      podTemplate:
+        spec:
+          containers:
+            - name: elasticsearch
+              readinessProbe:
+                exec:
+                  command:
+                    - bash
+                    - -c
+                    - /mnt/elastic-internal/scripts/readiness-probe-script.sh
+                failureThreshold: 3
+                initialDelaySeconds: 10
+                periodSeconds: 12
+                successThreshold: 1
+                timeoutSeconds: 12
+              env:
+                - name: READINESS_PROBE_TIMEOUT
+                  value: "10"
+      volumeClaimTemplates:
+        - metadata:
+            name: elasticsearch-data
+          spec:
+            accessModes:
+              - ReadWriteOnce
+            resources:
+              requests:
+                storage: 10Gi
+            storageClassName: gp2
+    - name: data
+      count: 2
+      config:
+        # most Elasticsearch configuration parameters are possible to set, e.g: node.attr.attr_name: attr_value
+        #node.roles: ["master", "data", "ingest", "ml"]
+        node.roles: ["data"]
+        script.painless.regex.enabled: true
+        http.cors.enabled: true
+        http.cors.allow-origin: "*"
+        #network.host: _site_ Forbidden: Configuration setting is reserved for internal use
+        #node.name: ${HOSTNAME} Forbidden: Configuration setting is reserved for internal use
+        bootstrap.memory_lock: true
+        #xpack.security.transport.ssl.enabled: true Forbidden: Configuration setting is reserved for internal use
+      podTemplate:
+        spec:
+          containers:
+            - name: elasticsearch
+              readinessProbe:
+                exec:
+                  command:
+                    - bash
+                    - -c
+                    - /mnt/elastic-internal/scripts/readiness-probe-script.sh
+                failureThreshold: 3
+                initialDelaySeconds: 10
+                periodSeconds: 12
+                successThreshold: 1
+                timeoutSeconds: 12
+              env:
+                - name: READINESS_PROBE_TIMEOUT
+                  value: "10"
+      volumeClaimTemplates:
+        - metadata:
+            name: elasticsearch-data
+          spec:
+            accessModes:
+              - ReadWriteOnce
+            resources:
+              requests:
+                storage: 20Gi
+            storageClassName: gp2
