--- a/kibana.yml
+++ b/kibana.yml
@@ -1,20 +1,23 @@
 apiVersion: v1
-kind: Service 
+kind: Service
 metadata:
   name: svc-kibana
   annotations:
-    alb.ingress.kubernetes.io/healthcheck-path: /kibana/api/status
-  labels: 
+    alb.ingress.kubernetes.io/healthcheck-path: /login
+    alb.ingress.kubernetes.io/backend-protocol: HTTPS
+    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
+    alb.ingress.kubernetes.io/backend-protocol-version: HTTP2
+  labels:
     app: kibana
 spec:
   selector:
     app: kibana
-#    tier: database
-  ports:  
-  - name: kibana
-    protocol: TCP
-    port: 5601
-    targetPort: 5601
+  #    tier: database
+  ports:
+    - name: kibana
+      protocol: TCP
+      port: 443
+      targetPort: 5601
   clusterIP: None # Headless
 ---
 apiVersion: apps/v1
@@ -37,41 +40,70 @@ spec:
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchExpressions:
-              - key: app
-                operator: In
-                values:
-                - kibana
-            topologyKey: "kubernetes.io/hostname"
-#      imagePullSecrets:
-#      - name: iconverse-docker
+            - labelSelector:
+                matchExpressions:
+                  - key: app
+                    operator: In
+                    values:
+                      - kibana
+              topologyKey: "kubernetes.io/hostname"
       containers:
-      - name: kibana
-        securityContext:
-          capabilities:
-            add:
-              - IPC_LOCK
-              - SYS_RESOURCE
-        image: kibana:8.3.2
-        imagePullPolicy: Always
-        command: ["/usr/share/kibana/bin/kibana"]
-        args: ["-c", "/etc/kibana/kibana.yml"]
-        ports:
-        - containerPort: 5601
-          name: kibana
-          protocol: TCP
-        volumeMounts:
-        - name: kibana-config
-          mountPath: /etc/kibana
-          readOnly: true
-        resources:
-          requests:
-            cpu: 250m
-          limits:
-            cpu: 500m
-            memory: 1024Mi
+        - name: kibana
+          securityContext:
+            capabilities:
+              add:
+                - IPC_LOCK
+                - SYS_RESOURCE
+          image: kibana:8.5.3
+          imagePullPolicy: Always
+          command: ["/usr/share/kibana/bin/kibana"]
+          args: ["-c", "/etc/kibana/kibana.yml"]
+          env:
+            - name: ELASTICSEARCH_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: elasticsearch
+                  key: username
+            - name: ELASTICSEARCH_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: elasticsearch
+                  key: password
+          readinessProbe:
+            httpGet:
+              scheme: HTTPS
+              path: /
+              port: 5601
+            initialDelaySeconds: 20
+            periodSeconds: 5
+            timeoutSeconds: 10
+            failureThreshold: 3
+            successThreshold: 1
+          livenessProbe:
+            httpGet:
+              scheme: HTTPS
+              path: /
+              port: 5601
+            initialDelaySeconds: 20
+            periodSeconds: 3
+            timeoutSeconds: 10
+            failureThreshold: 3
+            successThreshold: 1
+          ports:
+            - containerPort: 5601
+              name: kibana
+              protocol: TCP
+          volumeMounts:
+            - name: kibana-config
+              mountPath: /etc/kibana
+              readOnly: true
+          resources:
+            requests:
+              cpu: 250m
+            limits:
+              cpu: 500m
+              memory: 1024Mi
       volumes:
-      - name: kibana-config
-        configMap:
-          name: kibana-config
+        - name: kibana-config
+          configMap:
+            name: kibana-config
