--- a/svc-nodejsrestapi.yml
+++ b/svc-nodejsrestapi.yml
@@ -1,36 +1,36 @@
 apiVersion: v1
-kind: Service 
+kind: Service
 metadata:
   name: svc-nodejsrestapi
-#  annotations:
-#    alb.ingress.kubernetes.io/healthcheck-path: /nodejsrestapi/actuator/health
-  labels: 
+  #  annotations:
+  #    alb.ingress.kubernetes.io/healthcheck-path: /nodejsrestapi/actuator/health
+  labels:
     app: nodejsrestapi
 spec:
-  ports:  
-  - name: http
-    protocol: TCP
-    port: 443
-    targetPort: http
+  ports:
+    - name: https
+      protocol: TCP
+      port: 443
+      targetPort: https
   clusterIP: None # Headless. type cannot be LoadBalancer
   selector:
     app: nodejsrestapi
 #    tier: frontend
-#  type: LoadBalancer # Exposes web to traffic from outside of the cluster 
+#  type: LoadBalancer # Exposes web to traffic from outside of the cluster
 ---
 apiVersion: v1
-kind: Service 
+kind: Service
 metadata:
   name: svc-nodejsrestapi-nodeport
-  labels: 
+  labels:
     app: nodejsrestapi
 spec:
-  ports:  
-  - name: http
-    protocol: TCP
-    port: 443
-    targetPort: http
-    nodePort: 31002
+  ports:
+    - name: https
+      protocol: TCP
+      port: 443
+      targetPort: https
+      nodePort: 31002
   type: NodePort
   selector:
     app: nodejsrestapi
