--- a/access-log-template.yml
+++ b/access-log-template.yml
@@ -6,7 +6,7 @@ metadata:
 data:
   access_log_template.json: |
     {
-      "index_patterns": ["aspnetcorewebapi.logs*", "biz4x-backend.logs-*", "biz4x-frontend.logs-*", "identityservice.logs-*"],
+      "index_patterns": ["aspnetcorewebapi.logs-*", "biz4x-backend.logs-*", "biz4x-frontend.logs-*", "identityservice.logs-*"],
       "settings": {
         "number_of_shards": 5
       },
