Update access-log template for latest EFK versions

--- a/access-log-template.yml
+++ b/access-log-template.yml
@@ -12,10 +12,9 @@ data:
       },
       "mappings": {
           "properties": {
-            "type": { "type": "keyword" },
-            "location_array": { "type": "geo_point" },
-            "location_properties": { "type": "geo_point" },
-            "location_string": { "type": "geo_point" }
+              "location_properties": { "type": "geo_point" },
+              "location_string": { "type": "geo_point" },
+              "location_array": { "type": "geo_point" }
           }
       }
     }
