Add gmail smtp credentials secret

--- a/appsettings.Production.yml
+++ b/appsettings.Production.yml
@@ -62,5 +62,33 @@ data:
                     "Microsoft": "Debug"
                 }
             }
-         }
+         },
+        "Serilog": {
+            "Using": [ "Serilog.Sinks.File" ],
+            "MinimumLevel": {
+                "Default": "Debug",
+                "Override": {
+                    "Microsoft": "Debug",
+                    "System": "Warning",
+                    "Microsoft.Hosting.Lifetime": "Information",
+                    "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+                }
+            },
+            "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+            "WriteTo": [
+                {
+                    "Name": "File",
+                    "Args": {
+                        "Args": {
+                            "outputTemplate": "{Timestamp} {Level} {EventId} {Message:j} {Properties}{NewLine}{Exception}{NewLine}"
+                        },
+                        "Enrich": [ "FromLogContext" ],
+                        "path": "/var/log/aspnetcore/log",
+                        "rollingInterval": "Day",
+                        "retainedFileCountLimit": 3,
+                        "formatter": "Serilog.Formatting.Elasticsearch.ElasticsearchJsonFormatter, Serilog.Formatting.Elasticsearch, Version=0.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10"
+                    }
+                }
+            ]
+        }
       }
