--- a/appsettings.Production.yml
+++ b/appsettings.Production.yml
@@ -76,6 +76,7 @@ data:
                 "Default": "Information",
                 "Override": {
                     "Microsoft": "Warning",
+                    "Microsoft.AspNetCore": "Warning",
                     "System": "Warning",
                     "Microsoft.Hosting.Lifetime": "Warning",
                     "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
