--- a/nodejsrestapi.yml
+++ b/nodejsrestapi.yml
@@ -56,7 +56,7 @@ spec:
               protocol: TCP
           readinessProbe:
             httpGet:
-              path: /healthchecks/ready
+              path: /health/ready
               port: https
               scheme: HTTPS
             initialDelaySeconds: 10
@@ -66,7 +66,7 @@ spec:
             successThreshold: 1
           livenessProbe:
             httpGet:
-              path: /healthchecks/live
+              path: /health/live
               port: https
               scheme: HTTPS
             initialDelaySeconds: 10
