--- a/svc-nodejsrestapi.yml
+++ b/svc-nodejsrestapi.yml
@@ -2,8 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: svc-nodejsrestapi
-  #  annotations:
-  #    alb.ingress.kubernetes.io/healthcheck-path: /nodejsrestapi/actuator/health
+  annotations:
+    alb.ingress.kubernetes.io/backend-protocol: HTTPS
+    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
+    alb.ingress.kubernetes.io/backend-protocol-version: HTTP2
+    alb.ingress.kubernetes.io/healthcheck-path: /health/live
   labels:
     app: nodejsrestapi
 spec:
