--- a/aws-lb-controller.yml
+++ b/aws-lb-controller.yml
@@ -723,7 +723,7 @@ spec:
             - --ingress-class=alb
             - --aws-vpc-id=vpc-<VPCID>
             - --aws-region=ap-southeast-1
-          image: amazon/aws-alb-ingress-controller:v2.4.5
+          image: public.ecr.aws/eks/aws-load-balancer-controller:v2.4.6
           livenessProbe:
             failureThreshold: 2
             httpGet:
