--- a/gorestapi.yml
+++ b/gorestapi.yml
@@ -63,8 +63,8 @@ spec:
           successThreshold: 1
         resources:
           limits:
-            cpu: 250m
-            memory: 1024Mi
+            cpu: 500m
+            memory: 2Gi
       - name: fluentd
         image: khteh/fluentd:latest
         env:
@@ -81,8 +81,8 @@ spec:
           readOnly: true
         resources:
           limits:
-            cpu: 250m
-            memory: 1024Mi
+            cpu: 500m
+            memory: 2Gi
       volumes:
       - name: mysql-connection
         secret:
