--- a/nodejsrestapi.yml
+++ b/nodejsrestapi.yml
@@ -85,8 +85,8 @@ spec:
           #          mountPath: /var/log/aspnetcore
           resources:
             limits:
-              cpu: 250m
-              memory: 1024Mi
+              cpu: 500m
+              memory: 2Gi
       #      - name: fluentd
       #        image: khteh/fluentd:latest
       #        env:
@@ -103,8 +103,8 @@ spec:
       #          readOnly: true
       #        resources:
       #          limits:
-      #            cpu: 250m
-      #            memory: 1024Mi
+      #            cpu: 500m
+      #            memory: 2Gi
       volumes:
         - name: nodejsrestapi-config
           configMap:
