--- a/rabbitmq-kern-subscriber.yml
+++ b/rabbitmq-kern-subscriber.yml
@@ -67,8 +67,8 @@ spec:
           readOnly: true
         resources:
           limits:
-            cpu: 250m
-            memory: 1024Mi
+            cpu: 500m
+            memory: 2Gi
       volumes:
       - name: rabbitmq-secret
         secret:
