--- a/apmserver.yml
+++ b/apmserver.yml
@@ -2,17 +2,20 @@ apiVersion: apm.k8s.elastic.co/v1
 kind: ApmServer
 metadata:
   name: kyberlife
+  labels:
+    app: apmserver
+    component: eck
 spec:
   version: 8.7.1
-  count: 2
+  count: 3
   secureSettings:
-    - secretName: apm-secret
+    - secretName: kyberlife-es-elastic-user
   config:
     output:
       elasticsearch:
-        hosts: ["kyberlife-es-internal-http:9200"]
+        hosts: ["kyberlife-es-internal-http.default:9200"]
         username: elastic
-        password: "${ES_PASSWORD}"
+        password: "${elastic}"
         protocol: "https"
         ssl.certificate_authorities:
           ["/usr/share/apm-server/config/elasticsearch-ca/tls.crt"]
@@ -29,4 +32,4 @@ spec:
           secret:
             defaultMode: 420
             optional: false
-            secretName: es-ca # This is the secret that holds the Elasticsearch CA cert
+            secretName: elasticsearch-eck-ca # This is the secret that holds the Elasticsearch CA cert
