--- a/apmserver.yml
+++ b/apmserver.yml
@@ -13,7 +13,7 @@ spec:
   config:
     output:
       elasticsearch:
-        hosts: ["kyberlife-es-internal-http.default:9200"]
+        hosts: ["https://kyberlife-es-http:9200"]
         username: elastic
         password: "${elastic}"
         protocol: "https"
