--- a/appsettings.Production.yml
+++ b/appsettings.Production.yml
@@ -28,6 +28,14 @@ data:
           }
        },
        "DetailedErrors": true,
+        "ElasticApm": {
+            "ServiceName": "my-apm",
+            "SecretToken": "",
+            "apiKey": '',
+            "ServerUrl": "https://my-apm-http:8200",
+            "TransactionSampleRate": 1.0,
+            "VerifyServerCert": false
+        },        
        "Logging": {
            "LogLevel": {
                 "Default": "Information",
