--- a/elasticsearch-eck.yml
+++ b/elasticsearch-eck.yml
@@ -3,7 +3,7 @@ kind: Elasticsearch
 metadata:
   name: kyberlife
 spec:
-  version: 8.7.0
+  version: 8.7.1
   auth:
     fileRealm:
       - secretName: elasticsearch-secret
@@ -54,7 +54,7 @@ spec:
       config:
         # most Elasticsearch configuration parameters are possible to set, e.g: node.attr.attr_name: attr_value
         #node.roles: ["master", "data", "ingest", "ml"]
-        node.roles: ["data"]
+        node.roles: ["data", "ingest"]
         script.painless.regex.enabled: true
         http.cors.enabled: true
         http.cors.allow-origin: "*"
