--- a/kibana-eck.yml
+++ b/kibana-eck.yml
@@ -2,13 +2,50 @@ apiVersion: kibana.k8s.elastic.co/v1
 kind: Kibana
 metadata:
   name: kyberlife
+  namespace: default
 spec:
-  version: 8.7.0
+  version: 8.7.1
   count: 2
   elasticsearchRef:
     name: kyberlife
-    namespace: default
   http:
     tls:
       selfSignedCertificate:
         disabled: true
+  config:
+    xpack.fleet.agents.elasticsearch.hosts: ["https://kyberlife-es-internal-http:9200"]
+    xpack.fleet.agents.fleet_server.hosts: ["https://fleet-server-agent-http:8220"]
+    xpack.fleet.packages:
+      - name: system
+        version: latest
+      - name: elastic_agent
+        version: latest
+      - name: fleet_server
+        version: latest
+    xpack.fleet.agentPolicies:
+      - name: Fleet Server on ECK policy
+        id: eck-fleet-server
+        is_default_fleet_server: true
+        namespace: default
+        monitoring_enabled:
+          - logs
+          - metrics
+        unenroll_timeout: 900
+        package_policies:
+        - name: fleet_server-1
+          id: fleet_server-1
+          package:
+            name: fleet_server
+      - name: Elastic Agent on ECK policy
+        id: eck-agent
+        namespace: default
+        monitoring_enabled:
+          - logs
+          - metrics
+        unenroll_timeout: 900
+        is_default: true
+        package_policies:
+          - name: system-1
+            id: system-1
+            package:
+              name: system
