--- a/redis-cluster.yml
+++ b/redis-cluster.yml
@@ -7,6 +7,7 @@ metadata:
     component: redis
 spec:
   serviceName: svc-redis-cluster
+  podManagementPolicy: Parallel # Default is OrderedReady
   replicas: 6
   selector:
     matchLabels:
