Update GP3 sc to allow volume expansion

--- a/sc-gp3.yml
+++ b/sc-gp3.yml
@@ -3,6 +3,7 @@ kind: StorageClass
 provisioner: kubernetes.io/aws-ebs
 reclaimPolicy: Delete
 volumeBindingMode: WaitForFirstConsumer
+allowVolumeExpansion: true
 metadata:
   annotations:
     kubectl.kubernetes.io/last-applied-configuration: |
